<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitAnRequestActivity">

    <TextView
        android:id="@+id/textViewChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/where_you_want"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/yellow_900"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupChoose"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroupChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewWho"
        app:layout_constraintTop_toBottomOf="@+id/textViewChoose">

        <RadioButton
            android:id="@+id/radioButtonAnywhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/anywhere"
            android:textColor="@color/yellow_900" />

        <RadioButton
            android:id="@+id/radioButtonRearPositions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/want_to_be_efficient_in_rear"
            android:textColor="@color/yellow_900" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewWho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/what_do_you_want_to_be"
        android:textAlignment="center"
        android:textColor="@color/yellow_900"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxAirDefense"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupChoose"
        tools:layout_editor_absoluteX="8dp" />

    <CheckBox
        android:id="@+id/checkBoxMedic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medic"
        android:textColor="@color/yellow_900"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/checkBoxAirDefense"
        app:layout_constraintStart_toEndOf="@id/checkBoxRifleman"
        app:layout_constraintTop_toTopOf="@id/checkBoxAirDefense"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxAirDefense"
        app:layout_constraintTop_toBottomOf="@id/textViewWho" />

    <CheckBox
        android:id="@+id/checkBoxAirDefense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_defence_operator"
        android:textColor="@color/yellow_900"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewWeapon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/checkBoxMedic"
        app:layout_constraintTop_toBottomOf="@+id/textViewWho" />

    <CheckBox
        android:id="@+id/checkBoxRifleman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rifleman"
        android:textColor="@color/yellow_900"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/checkBoxMedic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkBoxMedic"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxMedic"
        app:layout_constraintTop_toBottomOf="@id/textViewWho" />

    <TextView
        android:id="@+id/textViewWeapon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/choose_your_weapon"
        android:textAlignment="center"
        android:textColor="@color/yellow_900"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerRear"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAirDefense"
        tools:layout_editor_absoluteX="8dp" />

    <Spinner
        android:id="@+id/spinnerFront"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_front_guns"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoOn"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeapon" />

    <Spinner
        android:id="@+id/spinnerRear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_rear_guns"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoOn"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeapon"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonGoOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/go_on"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRear"
        tools:layout_editor_absoluteX="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>